# http-diff

./: .gitignore  CONFIGURATION.md  Cargo.toml  README.md  build-osx.sh  build.rs
.github/workflows/: release.yml  tests.yml
pkg/brew/: http-diff-bin.rb  http-diff.rb
scripts/: build-deb.sh  generate-formula.sh  sha256-releases  ubuntu-install-dependencies
src/: actions.rs  app_state.rs  main.rs  notification.rs  reducer.rs  worker.rs
src/cli/: arguments.rs
src/http_diff/: app.rs  mod.rs  types.rs
src/http_diff/config/: config.rs  config_tests.rs  mod.rs
src/http_diff/job/: job.rs  job_mapper.rs  job_tests.rs  mod.rs
src/http_diff/request/: request.rs
src/http_diff/utils/: mod.rs  util_tests.rs  utils.rs
src/ui/: background.rs  exception.rs  help_screen.rs  mod.rs  notification.rs  progress.rs  row.rs  selected_job.rs  table.rs  theme.rs  top.rs
