[package]
name = "http-diff"
version = "0.0.4"
edition = "2021"
authors = ["Yoni Samoded <yoni.samoded@gmail.com>"]
description = "http-diff - CLI tool to verify consistency across web server versions. Ideal for large-scale refactors, sanity tests and maintaining data integrity across versions."
license = "Unlicense OR MIT"
documentation = "https://github.com/syte-ai/http-diff"
homepage = "https://github.com/syte-ai/http-diff"
repository = "https://github.com/syte-ai/http-diff"
keywords = ["http", "diff", "compare", "api", "response"]
categories = ["command-line-utilities", "web-programming"]

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
serde_json = "1.0.99"
serde = { version = "1.0.143", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
url = {version="2.4.1", features = ["serde"]}
anyhow = "1.0.75"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
reqwest = { version = "0.11.22", features = ["json"] }
futures = "0.3.28"
futures-util = "0.3"
regex = "1.10.2"
ratatui = "0.24.0"
crossterm = "0.27.0"
chrono = "0.4.30"
similar = "2.3.0"
rand = "0.8.5"
notify = "6.1.1"
openssl = { version = "0.10", features = ["vendored"] }
num_cpus = "1.16.0"

[dependencies.uuid]
version = "1.4.1"
features = [
    "v4",              
    "fast-rng",
    "macro-diagnostics",
]

[build-dependencies]
clap = { version = "4.4.7", features = ["derive", "cargo","env"] }
clap_complete = "4.5.1"
clap_mangen = "0.2.20"

[profile.release]
opt-level = 3
debug = "none"
strip = "symbols"
debug-assertions = false
overflow-checks = false
lto = "fat"
panic = "abort"
incremental = false
codegen-units = 1

[package.metadata.deb]
section = "utils"
assets = [
  ["target/release/http-diff", "usr/bin/", "755"],
  ["COPYING", "usr/share/doc/http-diff/", "644"],
  ["LICENSE-MIT", "usr/share/doc/http-diff/", "644"],
  ["UNLICENSE", "usr/share/doc/http-diff/", "644"],
  ["README.md", "usr/share/doc/http-diff/README", "644"],
  ["target/assets/http-diff.1", "usr/share/man/man1/http-diff.1", "644"],
  ["target/assets/http-diff.bash", "usr/share/bash-completion/completions/http-diff", "644"],
  ["target/assets/_http-diff", "usr/share/zsh/vendor-completions/_http-diff", "644"],
  ["target/assets/http-diff.desktop", "usr/share/applications/http-diff.desktop", "644"],
  ["assets/logo.png", "usr/share/pixmaps/http-diff.png", "644"],
]
extended-description = """\
http-diff - CLI tool to verify consistency across web server versions. Ideal for large-scale refactors, sanity tests and maintaining data integrity across versions.
"""
